--- a/index.html
+++ b/index.html
@@ -80,6 +80,23 @@
         </div>
     </section>
 
+    <!-- Introduction Video Section -->
+<section id="introduction-video" data-aos="fade-up">
+    <h2>Introduction to DPSA KMS</h2>
+    <div class="video-container" data-aos="zoom-in" data-aos-delay="200">
+        <video controls poster="assets/images/video-poster.jpg">
+            <source src="assets/videos/intro.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+    <p class="video-description" data-aos="fade-up" data-aos-delay="300">
+        Discover how DPSA's Knowledge Management System streamlines your workflow, enhances collaboration, and empowers you with the tools you need to excel in your role.
+    </p>
+</section>
+
+
+    
+
     <!-- Testimonials Section -->
     <section id="testimonials">
         <h2>Why DPSA Trusts Our KMS</h2>
