--- a/index.html
+++ b/index.html
@@ -86,11 +86,13 @@
     <div class="video-container" data-aos="zoom-in" data-aos-delay="200">
         <video controls poster="assets/images/video-poster.jpg">
             <source src="assets/videos/intro.mp4" type="video/mp4">
+            <track kind="captions" src="assets/videos/intro.vtt" srclang="en" label="English">
             Your browser does not support the video tag.
         </video>
     </div>
     <p class="video-description" data-aos="fade-up" data-aos-delay="300">
         Discover how DPSA's Knowledge Management System streamlines your workflow, enhances collaboration, and empowers you with the tools you need to excel in your role.
+        <a href="dashboard.html" class="btn btn-primary" data-aos="fade-up" data-aos-delay="400">Explore Dashboard</a>
     </p>
 </section>
 
